--- a/src/sample/CheckListUI.fxml
+++ b/src/sample/CheckListUI.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.CheckBox?>
 
-<GridPane id="checkList" alignment="TOP_LEFT" hgap="10" vgap="10">
+<GridPane fx:controller="sample.CheckListController" xmlns:fx="http://javafx.com/fxml" id="checkList" alignment="TOP_LEFT" hgap="10" vgap="10">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
@@ -74,7 +74,12 @@
 
 
     <Label text="Backup tool" GridPane.columnIndex="5" GridPane.rowIndex="0"></Label>
-    <Button text="Launch" GridPane.columnIndex="6" GridPane.rowIndex="0"></Button>
+    <Button text="Launch" GridPane.columnIndex="6" GridPane.rowIndex="0" onAction="#launchBackup"></Button>
+
+    <Label fx:id="cameraType" text="Camera type" GridPane.columnIndex="5" GridPane.rowIndex="1"/>
+    <Label fx:id="cameraPartNumber" text="Camera part number" GridPane.columnIndex="6" GridPane.rowIndex="1"/>
+    <Label fx:id="cameraConfig" text="Camera config" GridPane.columnIndex="5" GridPane.rowIndex="2"/>
+    <Label fx:id="cameraSoftware" text="Camera software" GridPane.columnIndex="6" GridPane.rowIndex="2"/>
 
 
 </GridPane>
